--- a/eurekaserver/src/main/resources/application.properties
+++ b/eurekaserver/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 
+spring.application.name = eurekaserver
+server.port = 8761
+
+eureka.instance.hostname = localhost
+#eureka server doesnt need to register with a eureka server
+eureka.client.register-with-eureka=false
+#dont cache registry info locally
+eureka.client.fetch-registry=false
+#service url for clients (hostname & server port)
+eureka.client.serviceUrl.defaultZone = http://${eureka.instance.hostname}:${server.port}/eureka/
+#wait 5 mins before advertising services
+#services need to ping eureka 3x (spaced 10s)
+eureka.server.wait-time-in-ms-when-sync-empty = 5
+eureka.server.renewal-percent-threshold = 0.85
