--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -1,1 +1,17 @@
 
+spring.application.name = gateway
+#Gateway
+spring.cloud.gateway.globalcors.corsConfigurations.[/**].allowedOriginPatterns=*
+spring.cloud.gateway.globalcors.corsConfigurations.[/**].allowCredentials=true
+spring.cloud.gateway.globalcors.corsConfigurations.[/**].allowedMethods=*
+spring.cloud.gateway.globalcors.corsConfigurations.[/**].allowedHeaders=*
+spring.cloud.gateway.discovery.locator.enabled= true
+spring.cloud.gateway.discovery.locator.lower-case-service-id= true
+management.endpoint.gateway.enabled= true
+
+
+#eureka
+eureka.instance.prefer-ip-address= true
+eureka.client.register-with-eureka= true
+eureka.client.fetch-registry= true
+eureka.client.serviceUrl.defaultZone = http://localhost:8761/eureka/
