--- a/gateway/build.gradle
+++ b/gateway/build.gradle
@@ -10,7 +10,11 @@ version = '0.0.1-SNAPSHOT'
 java {
     sourceCompatibility = '17'
 }
-
+configurations {
+    compileOnly {
+        extendsFrom annotationProcessor
+    }
+}
 repositories {
     mavenCentral()
 }
@@ -20,13 +24,10 @@ ext {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-webflux:3.0.4'
-    implementation 'org.springframework.cloud:spring-cloud-starter-gateway:4.0.3'
-    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:4.0.0'
+    implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
+    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+    implementation 'javax.servlet:javax.servlet-api:4.0.1'
     developmentOnly 'org.springframework.boot:spring-boot-devtools:3.0.4'
-    developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
-    annotationProcessor 'org.projectlombok:lombok:1.18.26'
-    compileOnly 'org.projectlombok:lombok:1.18.26'
     testImplementation 'org.springframework.boot:spring-boot-starter-test:3.1.0'
     testImplementation 'io.projectreactor:reactor-test:3.5.4'
 }
