--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-
 spring.application.name = gateway
 #Gateway
 spring.cloud.gateway.globalcors.corsConfigurations.[/**].allowedOriginPatterns=*
@@ -12,6 +11,8 @@ management.endpoint.gateway.enabled= true
 
 #eureka
 eureka.instance.prefer-ip-address= true
+eureka.instance.status-page-url=https://${eureka.hostname}/info
+eureka.instance.health-check-url=https://${eureka.hostname}/health
 eureka.client.register-with-eureka= true
 eureka.client.fetch-registry= true
 eureka.client.serviceUrl.defaultZone = http://localhost:8761/eureka/
