--- a/tripservice/src/main/resources/application.properties
+++ b/tripservice/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+spring.application.name = tripservice
+server.port = 8082
 
+#DB
+spring.data.mongodb.host=${MONGO_DB_HOST}
+spring.data.mongodb.port=${MONGO_DB_PORT}
+spring.data.mongodb.database=${MONGO_DB_NAME}
+spring.data.mongodb.auto-index-creation = true
+#eureka
+eureka.instance.prefer-ip-address= true
+eureka.instance.status-page-url=https://${eureka.hostname}/info
+eureka.instance.health-check-url=https://${eureka.hostname}/health
+eureka.client.register-with-eureka= true
+eureka.client.fetch-registry= true
+eureka.client.serviceUrl.defaultZone = http://localhost:8761/eureka/
